# xoz

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  Makefile  README.md  Tuprules.tup  tup.config
build-default/: tup.config
build-fuzzing/: tup.config
cmake/: CompilerWarnings.cmake
configs/: debug-clang.config  debug-gcc.config  debug.config  release-clang.config  release-gcc.config  testing-clang.config  testing-gcc.config
dataset-xopp/: README.md  collect.py  plotting.py  simulate_alloc.py  simulate_frag.py  split_xopp.py  stats.py
demos/: CMakeLists.txt  Tupfile  allocdemo.cpp  tarlike.cpp  tarlike.md
docs/: RFC:-Block-Size-and-Block-Extent-Specification.md  RFC:-Specification-of-Descriptor-and-Descriptor-Set.md  RFC:-Specification-of-Descriptor-and-Stream.md  RFC:-Specification-of-Segment,-Extent-and-Block-Size.md  xoz-file-format-objects-spec.md  xoz-format.md
docs/media/: md2gh.py  md2githubmd.py
docs/media/xoz-diagrams/: format.drawio
test/: CMakeLists.txt  Tupfile  balloc.cpp  extent.cpp  main.cpp  plain.cpp  plain.h  read_write_extents.cpp  repo.cpp  rw_extent_full_alloc.cpp  rw_extent_sub_alloc.cpp  testing_xoz.cpp  testing_xoz.h
test/alloc/: CMakeLists.txt  free_list.cpp  free_map.cpp  segm_allocator.cpp  segment_allocator.cpp  subblock_free_map.cpp  tail_allocator.cpp
test/blk/: CMakeLists.txt  file_block_array.cpp  file_rw_extent_full_alloc.cpp  file_rw_extent_sub_alloc.cpp  segment_block_array_64_128.cpp  segment_block_array_64_16.cpp  segment_block_array_64_2.cpp  segment_block_array_64_64.cpp  vector_block_array.cpp
test/dsc/: CMakeLists.txt  descriptor.cpp  descriptor_compatibility.cpp  descriptor_set.cpp  dset_holder.cpp
test/ext/: CMakeLists.txt  Tupfile  extent.cpp  segment.cpp
test/file/: CMakeLists.txt  create_memfile.cpp  create_realfile.cpp  index.cpp
test/io/: CMakeLists.txt  iosegm.cpp  iosegment.cpp  iospan.cpp
test/mem/: CMakeLists.txt  double.cpp  inet_checksum.cpp  iospan.cpp
test/repo/: create_memfile.cpp  create_realfile.cpp  root_desc_set.cpp  rw_extent_full_alloc.cpp  rw_extent_sub_alloc.cpp
test/segm/: CMakeLists.txt  iosegm.cpp  segment.cpp
test/tarlike-files/: ada  basic  csharp
tools/: CMakeLists.txt  xozstats.cpp
xoz/: Tupfile  arch.h  balloc.cpp  balloc.h  blkstreambuf.h  chk.h  exceptions.cpp  exceptions.h  extent.cpp  extent.h  parameters.h  repo.cpp  repo.h  trace.cpp  trace.h
xoz/alloc/: CMakeLists.txt  Tupfile  free_list.cpp  free_list.h  free_map.cpp  free_map.h  internals.cpp  internals.h  segm_allocator.cpp  segm_allocator.h  segment_allocator.cpp  segment_allocator.h  subblock_free_map.cpp  subblock_free_map.h  tail_allocator.cpp  tail_allocator.h
xoz/blk/: CMakeLists.txt  block_array.cpp  block_array.h  file_block_array.cpp  file_block_array.h  segment_block_array.cpp  segment_block_array.h  segment_block_array_flags.h  vector_block_array.cpp  vector_block_array.h
xoz/dsc/: CMakeLists.txt  content.cpp  content.h  default.cpp  default.h  descriptor.cpp  descriptor.h  descriptor_mapping.cpp  descriptor_mapping.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_flags.h  dset_holder.cpp  dset_holder.h  id_mapping.cpp  id_mapping.h  internals.h  opaque.cpp  opaque.h  plain.cpp  plain.h  private.cpp  private.h  spy.h
xoz/err/: CMakeLists.txt  bug.cpp  bug.h  exceptions.h  extent.cpp  extent.h  msg.h  size.cpp  size.h  xoz.cpp  xoz.h
xoz/ext/: CMakeLists.txt  block_array.cpp  block_array.h  calcsz.cpp  extent.cpp  extent.h  internal_defs.h  rw_segm.cpp  segment.cpp  segment.h
xoz/file/: CMakeLists.txt  file.cpp  file.h  id_manager.h  index.cpp  index.h  runtime_config.h  runtime_context.h
xoz/io/: CMakeLists.txt  iobase.cpp  iobase.h  iorestricted.cpp  iorestricted.h  iosegment.cpp  iosegment.h  iospan.cpp  iospan.h
xoz/log/: CMakeLists.txt  format_string.h  trace.cpp  trace.h
xoz/mem/: CMakeLists.txt  asserts.cpp  asserts.h  bits.h  casts.h  double.cpp  double.h  endianness.h  inet_checksum.cpp  inet_checksum.h  integer_ops.h  iobase.cpp  iobase.h  iorestricted.cpp  iorestricted.h  ioslice.cpp  ioslice.h  iospan.cpp  iospan.h  viewof.h
xoz/repo/: CMakeLists.txt  common.h  extent.cpp  fpresize.cpp  hdrtrailer.cpp  id_manager.h  openclose.cpp  repo.cpp  repo.h  repository.cpp  repository.h  runtime_context.cpp  runtime_context.h  rw_extent.cpp
xoz/segm/: CMakeLists.txt  internals.h  iosegm.cpp  iosegm.h  iosegment.cpp  iosegment.h  segment.cpp  segment.h
